--- a/PAIXUE.html
+++ b/PAIXUE.html
@@ -22,7 +22,7 @@
       // Slide settings
       settings: {
                 title: 'Early medieval Roman groupness',
-                        subtitle: 'douglaswhalin.github.io/talks/PAIXUE',
+                        subtitle: 'douglaswhalin.github.io/talks/PAIXUE.html',
                 useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
